# data-lakehouse

./: .gitignore  README.md
local/: Makefile  README.md  docker-compose.yml  pyproject.toml  temp.py
local/app/: __main__.py
local/app/conf/: config.yaml
local/app/conf/dl/: minio.yaml
local/app/src/: configuration.py  file_uploader.py  file_writer.py
local/tmp/some_delta_lake/: 0-3e422673-a2b2-4ac4-bcd6-35027ab9c962-0.parquet
