[tool.poetry]
name = "local"
version = "0.1.0"
description = "How to use delta lake locally"
authors = ["Fernando Chafim <fernandochafim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
deltalake = "^0.15.3"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
